@@ -20,6 +20,10 @@
    - markus@cvs.openbsd.org 2002/02/28 15:46:33
      [authfile.c kex.c kexdh.c kexgex.c key.c ssh-dss.c]
      add some const EVP_MD for openssl-0.9.7
+   - stevesk@cvs.openbsd.org 2002/02/28 19:36:28
+     [auth.c match.c match.h]
+     delay hostname lookup until we see a ``@'' in DenyUsers and AllowUsers
+     for sshd -u0; ok markus@
 
 20020226
  - (tim) Bug 12 [configure.ac] add sys/bitypes.h to int64_t tests
